# FumeGuard

./: .env.example  .gitignore  Makefile  README.md  bot.py  config.example.json  config.example.py  fumeguard.py  launcher.py  pyproject.toml  requirements.txt
cogs/: __core__.py  __dev__.py  __error__.py  __eval__.py  __ipc__.py  __topgg__.py  afk.py  automod.py  general.py  help.py  moderation.py  roles.py  settings.py
utils/: checks.py  config.py  db.py  logger.py  modals.py  tools.py
