[project]
name = "FumeGuard"
version = "1.0.0"
description = "Moderation, Roles, Logging, Welcome Messages, AFK status - YOU NAME IT - FumeGuard has got your community covered!"
license = "AGPL-3.0"
authors = [
    { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql==0.3.2",
    "click==8.4.1",
    "discord-py[speed]==2.7.1",
    "fumestop-ext-ipc==1.0.0",
    "python-dotenv==1.2.2",
    "topggpy==1.4.0",
]

[project.optional-dependencies]
speed = [
    "uvloop==0.22.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.15",
]

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "discord", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"config" = ["config"]
"discord" = ["discord"]
"typing" = ["typing"]
